--- a/public_html/pages/courses.html
+++ b/public_html/pages/courses.html
@@ -26,23 +26,43 @@
     <section class="navsec">
       <nav class="navbar">
         <div class="hamburger" id="hamburger"></div>
-      <div
-          class="flex items-center gap-4 w-[200px] sm:w-[300px] lg:w-[460px] ">
-          <!-- Logo clickable -->
-          <a href="/" class="nav-logo">
-            <img src="../assets/images/newimages/PNI New Logo .png"
-              alt="PNI Logo"
-              class="w-auto h-12" />
+         <div
+          class="flex items-center gap-4 w-[200px] sm:w-[300px] lg:w-[560px]">
+
+          <!-- Logo -->
+          <a href="/" class="shrink-0">
+            <img src="../assets/images/newimages/PNI New Logo .png" alt="PNI Logo"
+              class="object-contain w-auto h-12" />
           </a>
 
-          <!-- Clickable phone number -->
-          <div class="hidden md:block">
-            <p class="mx-auto text-blue-500">For Inquiry contact</p>
-            <a href="tel:+919099255528"
-              class="text-sm text-blue-500 underline hover:underline sm:text-base">
-              +91 90992 55528
-            </a>
+          <!-- Inquiry Info (hidden on small screens) -->
+          <div
+            class="flex-col justify-center hidden leading-tight md:flex">
+
+            <div class="flex items-center gap-2">
+              <!-- Info Icon -->
+              <p class="text-sm font-medium text-gray-600 sm:text-base">
+                For inquiries, contact
+              </p>
+            </div>
+
+            <div class="flex items-center gap-2">
+              <!-- Phone Icon -->
+              <svg xmlns="http://www.w3.org/2000/svg"
+                class="w-4 h-4 text-blue-600" fill="none"
+                viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M3 5a2 2 0 012-2h3.586a1 1 0 01.707.293l1.414 1.414a1 1 0 01.293.707V7a2 2 0 01-2 2H8v2a9 9 0 009 9h2v-1a2 2 0 012-2h1.586a1 1 0 01.707.293l1.414 1.414a1 1 0 01.293.707V19a2 2 0 01-2 2H5a2 2 0 01-2-2V5z" />
+              </svg>
+              <a href="tel:+919099255528"
+                class="text-sm text-blue-600 underline transition sm:text-base hover:text-blue-800 underline-offset-2">
+                +91 90992 55528
+              </a>
+            </div>
+
           </div>
+
         </div>
         <ul class="nav-links" id="navLinks">
           <a href="../index.html">
@@ -105,7 +125,7 @@
     </section>
 
     <section class="courses__title page__title">
-      <div class="container">
+      <div class="container max-w-[80%] mx-auto">
         <h1 class="title__header">Courses</h1>
       </div>
     </section>
@@ -1773,7 +1793,7 @@
       </script>
     </section>
 
-     <section class="footer max-w-[90%] md:max-w-[100%] mx-auto">
+      <section class="footer ">
       <div
         class="container footer-top bg-gradient-to-r from-[#0A0A23] to-[#A33A17] text-white rounded-t-xl px-4 py-6 flex flex-col md:flex-row justify-between items-center gap-4">
         <div class="ft-left">
@@ -1795,7 +1815,8 @@
 
       <div
         class="footer-bottom bg-[#0A0A23] text-white px-6 py-10 md:py-12 ">
-        <div class="container grid gap-10 md:grid-cols-4">
+        <div
+          class="container grid gap-10 md:grid-cols-4 max-w-[90%] md:max-w-[90%] mx-auto">
           <!-- About -->
           <div>
             <img src="../dist/images/gallery/PNI White Logo.png" alt
