--- a/public_html/pages/courses.html
+++ b/public_html/pages/courses.html
@@ -117,8 +117,10 @@
           <a href="contact.html">
             <li class="nav__link">Contact Us</li>
           </a>
-          <a href="https://pace.pninstitute.in">
-            <li class="nav__link button glowing_button"> &nbsp &nbsp &nbsp PACE &nbsp &nbsp &nbsp</li>
+     <a href="/pages/pace.html" target="_blank">
+            <li class="nav__link button glowing_button">
+              &nbsp &nbsp &nbsp PACE &nbsp &nbsp &nbsp
+            </li>
           </a>
         </ul>
       </nav>
