--- a/public_html/index.html
+++ b/public_html/index.html
@@ -317,7 +317,7 @@
           <a href="pages/contact.html">
             <li class="nav__link">Contact Us</li>
           </a>
-          <a href="https://pninstitute.in/pages/pace.html" target="_blank">
+          <a href="/pages/pace.html" target="_blank">
             <li class="nav__link button glowing_button">
               &nbsp &nbsp &nbsp PACE &nbsp &nbsp &nbsp
             </li>
