--- a/public_html/pages/student.html
+++ b/public_html/pages/student.html
@@ -798,52 +798,52 @@ input[type=submit]:hover {
             <th>Topic</th>
             <th>Link</th>
           </tr>
-          <tr>
+          <tr class="text-center">
             <td>01</td>
             <td>10th CBSE Sample paper cdr</td>
-            <td><button class="openButton"
+            <td><button class="px-6 py-2 mx-auto openButton"
                 onclick="openForm()"><strong>Download</strong></button></td>
           </tr>
-          <tr>
+          <tr class="text-center">
             <td>02</td>
             <td>Class 10th Maths IMP</td>
-            <td><button class="openButton"
+            <td><button class="px-6 py-2 mx-auto openButton"
                 onclick="openForm1()"><strong>Download</strong></button></td>
           </tr>
-          <tr>
+          <tr class="text-center">
             <td>03</td>
             <td>Class 10th Sci IMP</td>
-            <td><button class="openButton"
+            <td><button class="px-6 py-2 mx-auto openButton"
                 onclick="openForm2()"><strong>Download</strong></button></td>
           </tr>
-          <tr>
+          <tr class="text-center">
             <td>04</td>
             <td>Class 12th Math formula list</td>
-            <td><button class="openButton"
+            <td><button class="px-6 py-2 mx-auto openButton"
                 onclick="openForm3()"><strong>Download</strong></button></td>
           </tr>
-          <tr>
+          <tr class="text-center">
             <td>05</td>
             <td>Class 10th formula list</td>
-            <td><button class="openButton"
+            <td><button class="px-6 py-2 mx-auto openButton"
                 onclick="openForm4()"><strong>Download</strong></button></td>
           </tr>
-          <tr>
+          <tr class="text-center">
             <td>06</td>
             <td>Class 10th SS IMP Question</td>
-            <td><button class="openButton"
+            <td><button class="px-6 py-2 mx-auto openButton"
                 onclick="openForm5()"><strong>Download</strong></button></td>
           </tr>
-          <tr>
+          <tr class="text-center">
             <td>08</td>
             <td>Class 10th Theorems </td>
-            <td> <button class="openButton"
+            <td> <button class="px-6 py-2 mx-auto openButton"
                 onclick="openForm6()"><strong>Download</strong></button></td>
           </tr>
-          <tr>
+          <tr class="text-center">
             <td>09</td>
             <td>Class 12th Formula part 2</td>
-            <td> <button class="openButton"
+            <td> <button class="px-6 py-2 mx-auto openButton"
                 onclick="openForm7()"><strong>Download</strong></button></td>
           </tr>
 
