--- a/public_html/pages/contact.html
+++ b/public_html/pages/contact.html
@@ -50,15 +50,15 @@
             <div class="flex items-center gap-2">
               <!-- Phone Icon -->
               <svg xmlns="http://www.w3.org/2000/svg"
-                class="w-4 h-4 text-blue-600" fill="none"
-                viewBox="0 0 24 24" stroke="currentColor">
+                class="w-4 h-4 text-blue-600" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round"
                   stroke-width="2"
-                  d="M3 5a2 2 0 012-2h3.586a1 1 0 01.707.293l1.414 1.414a1 1 0 01.293.707V7a2 2 0 01-2 2H8v2a9 9 0 009 9h2v-1a2 2 0 012-2h1.586a1 1 0 01.707.293l1.414 1.414a1 1 0 01.293.707V19a2 2 0 01-2 2H5a2 2 0 01-2-2V5z" />
+                  d="M3 5a2 2 0 012-2h3.586a1 1 0 01.707.293l1.414 1.414a1 1 0 01.293.707V7a1 1 0 01-.293.707L9 9.414a1 1 0 00-.293.707v.586a11.05 11.05 0 004.243 4.243h.586a1 1 0 00.707-.293L15.707 13a1 1 0 01.707-.293H19a2 2 0 012 2v3a2 2 0 01-2 2h-2C9.716 21 3 14.284 3 6V5z" />
               </svg>
-              <a href="tel:+919099255528"
+              <a href="tel:+917433986083"
                 class="text-sm text-blue-600 underline transition sm:text-base hover:text-blue-800 underline-offset-2">
-                +91 90992 55528
+                +91 74339 86083
               </a>
             </div>
 
@@ -71,18 +71,18 @@
           </a>
           <a href="#">
             <li class="nav__link sub-list-parent" id="subListHandle">
-              Pay Fees <span class="down-arrow"></span>
+              Pay Fees
 
             </li>
           </a>
-          <a href="overview.html">
+          <a href="#">
             <li class="nav__link">Overview</li>
           </a>
           <!-- <a href="admission.html">
             <li class="nav__link">Admissions</li>
           </a> -->
           <a href="faq.html">
-            <li class="nav__link">Faq</li>
+            <li class="nav__link">FAQ</li>
           </a>
           <a href="courses.html">
             <li class="nav__link">Courses</li>
@@ -115,7 +115,7 @@
           <a href="career.html">
             <li class="nav__link">Career</li>
           </a>
-          <a href="#">
+          <a href="contact.html">
             <li class="nav__link">Contact Us</li>
           </a>
           <a href="/pages/pace.html" target="_blank">
@@ -146,7 +146,10 @@
 
     <section class="contact-info">
       <div class="container contact-info__container">
-        <h2 class="section__title">Contact Info</h2>
+
+        <div class="container text-4xl font-bold text-center lg:text-5xl ">
+          Contact Info
+        </div>
         <div class="info-container">
           <div class="info-left">
             <p>
@@ -171,6 +174,7 @@
             <p><b>ADDRESS: </b> Gajanan Heights, Nr. Darbar Chokdi, Manjalpur,
               Vadodara.</p>
             <p><b>PHONE: </b> +91 9099255528</p>
+            <p><b>PHONE: </b> +91 7433986083</p>
             <p><b>EMAIL: </b> info@pninstitute.in</p>
             <div class="social">
               <a href="https://www.facebook.com/pninstitute/"><img
@@ -191,7 +195,10 @@
       <div class="container contact-form__container">
         <form action='/submit-contact' method="POST" class="registration-form"
           data-aos="fade-left" id="contactForm">
-          <h2 class="section__title">Get in touch</h2>
+
+          <div class="container text-4xl font-bold text-center lg:text-5xl ">
+            Get in touch
+          </div>
           <p class="section__description">WE ARE ALWAYS OPEN TO YOUR IDEAS</p>
           <input type="text" placeholder="Name" name="name" id="name"
             required />
@@ -410,7 +417,7 @@
             },
             loop: true,
             autoplay: {
-              delay: 3000,
+              delay: 1500,
               disableOnInteraction: false,
               pauseOnMouseEnter: true,
             },
@@ -437,7 +444,7 @@
           </p>
         </div>
         <div class="mr-6 ft-right">
-          <a href="https://pace.pninstitute.in/" target="_blank">
+          <a href="pages/pace.html" target="_blank">
             <div
               class="bg-white text-[#A33A17] font-semibold px-6 py-2 rounded-md hover:opacity-90 transition">Apply
               Now</div>
@@ -450,7 +457,7 @@
         <div class="container grid gap-10 md:grid-cols-4">
           <!-- About -->
           <div>
-            <img src="../dist/images/gallery/PNI White Logo.png" alt
+            <img src="../images/PNI New.png" alt
               class="mb-4">
             <p class="text-sm">P. N. Institute educates its students in the
               fields of Science, Commerce to discover and transmit
