--- a/public_html/pages/result.html
+++ b/public_html/pages/result.html
@@ -23,12 +23,13 @@
     <section class="navsec">
       <nav class="navbar">
         <div class="hamburger" id="hamburger"></div>
-   <div
+        <div
           class="flex items-center gap-4 w-[200px] sm:w-[300px] lg:w-[560px]">
 
           <!-- Logo -->
           <a href="/" class="shrink-0">
-            <img src="../assets/images/newimages/PNI New Logo .png" alt="PNI Logo"
+            <img src="../assets/images/newimages/PNI New Logo .png"
+              alt="PNI Logo"
               class="object-contain w-auto h-12" />
           </a>
 
@@ -46,15 +47,15 @@
             <div class="flex items-center gap-2">
               <!-- Phone Icon -->
               <svg xmlns="http://www.w3.org/2000/svg"
-                class="w-4 h-4 text-blue-600" fill="none"
-                viewBox="0 0 24 24" stroke="currentColor">
+                class="w-4 h-4 text-blue-600" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round"
                   stroke-width="2"
-                  d="M3 5a2 2 0 012-2h3.586a1 1 0 01.707.293l1.414 1.414a1 1 0 01.293.707V7a2 2 0 01-2 2H8v2a9 9 0 009 9h2v-1a2 2 0 012-2h1.586a1 1 0 01.707.293l1.414 1.414a1 1 0 01.293.707V19a2 2 0 01-2 2H5a2 2 0 01-2-2V5z" />
+                  d="M3 5a2 2 0 012-2h3.586a1 1 0 01.707.293l1.414 1.414a1 1 0 01.293.707V7a1 1 0 01-.293.707L9 9.414a1 1 0 00-.293.707v.586a11.05 11.05 0 004.243 4.243h.586a1 1 0 00.707-.293L15.707 13a1 1 0 01.707-.293H19a2 2 0 012 2v3a2 2 0 01-2 2h-2C9.716 21 3 14.284 3 6V5z" />
               </svg>
-              <a href="tel:+919099255528"
+              <a href="tel:+917433986083"
                 class="text-sm text-blue-600 underline transition sm:text-base hover:text-blue-800 underline-offset-2">
-                +91 90992 55528
+                +91 74339 86083
               </a>
             </div>
 
@@ -67,27 +68,25 @@
           </a>
           <a href="#">
             <li class="nav__link sub-list-parent" id="subListHandle">
-              Pay Fees <span class="down-arrow"></span>
-              
+              Pay Fees
+
             </li>
           </a>
-          <a href="overview.html">
+          <a href="#">
             <li class="nav__link">Overview</li>
           </a>
           <!-- <a href="admission.html">
             <li class="nav__link">Admissions</li>
           </a> -->
           <a href="faq.html">
-            <li class="nav__link">Faq</li>
+            <li class="nav__link">FAQ</li>
           </a>
           <a href="courses.html">
             <li class="nav__link">Courses</li>
           </a>
           <a href="student.html">
-            <li class="nav__link">Student Corner
-            </li>
+            <li class="nav__link">Student Corner</li>
           </a>
-          
           <!-- <a href="#">
             <li class="nav__link sub-list-parent" id="subListHandle">
               Student Corner <span class="down-arrow">&gt;</span>
@@ -107,7 +106,7 @@
               </ul>
             </li>
           </a> -->
-          <a href="#">
+          <a href="result.html">
             <li class="nav__link">Results</li>
           </a>
           <a href="career.html">
@@ -116,7 +115,7 @@
           <a href="contact.html">
             <li class="nav__link">Contact Us</li>
           </a>
-   <a href="/pages/pace.html" target="_blank">
+          <a href="/pages/pace.html" target="_blank">
             <li class="nav__link button glowing_button">
               &nbsp &nbsp &nbsp PACE &nbsp &nbsp &nbsp
             </li>
@@ -133,7 +132,10 @@
 
      <section class="carousel1">
          <div class="container">
-            <h2 class="section__title">Hall of Fame</h2>
+
+              <div class="container text-4xl font-bold text-center lg:text-5xl ">
+    Hall of Fame
+        </div>
             <div class="section__description">
                CELEBRATING THE HARD WORK OF OUR STUDENTS NOW AND ALWAYS
             </div>
@@ -150,7 +152,7 @@
 
          </div>
       </section>
-      <section class="pro-section">
+      <section class="pro-section bg-[#0A0A23]">
         <div class="left-pro">
             <h2>The Mastermind Behind Our Success</h2>
             <p>The courses are conceptualized and designed by India’s Best Teachers, hailing from Top Educational
@@ -319,7 +321,7 @@
           </p>
         </div>
         <div class="mr-6 ft-right">
-          <a href="https://pace.pninstitute.in/" target="_blank">
+          <a href="pages/pace.html" target="_blank">
             <div
               class="bg-white text-[#A33A17] font-semibold px-6 py-2 rounded-md hover:opacity-90 transition">Apply
               Now</div>
@@ -333,7 +335,7 @@
           class="container grid gap-10 md:grid-cols-4 max-w-[90%] md:max-w-[90%] mx-auto">
           <!-- About -->
           <div>
-            <img src="../dist/images/gallery/PNI White Logo.png" alt
+            <img src="../images/PNI New.png" alt
               class="mb-4">
             <p class="text-sm">P. N. Institute educates its students in the
               fields of Science, Commerce to discover and transmit
