--- a/public_html/pages/overview.html
+++ b/public_html/pages/overview.html
@@ -51,15 +51,15 @@
             <div class="flex items-center gap-2">
               <!-- Phone Icon -->
               <svg xmlns="http://www.w3.org/2000/svg"
-                class="w-4 h-4 text-blue-600" fill="none"
-                viewBox="0 0 24 24" stroke="currentColor">
+                class="w-4 h-4 text-blue-600" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round"
                   stroke-width="2"
-                  d="M3 5a2 2 0 012-2h3.586a1 1 0 01.707.293l1.414 1.414a1 1 0 01.293.707V7a2 2 0 01-2 2H8v2a9 9 0 009 9h2v-1a2 2 0 012-2h1.586a1 1 0 01.707.293l1.414 1.414a1 1 0 01.293.707V19a2 2 0 01-2 2H5a2 2 0 01-2-2V5z" />
+                  d="M3 5a2 2 0 012-2h3.586a1 1 0 01.707.293l1.414 1.414a1 1 0 01.293.707V7a1 1 0 01-.293.707L9 9.414a1 1 0 00-.293.707v.586a11.05 11.05 0 004.243 4.243h.586a1 1 0 00.707-.293L15.707 13a1 1 0 01.707-.293H19a2 2 0 012 2v3a2 2 0 01-2 2h-2C9.716 21 3 14.284 3 6V5z" />
               </svg>
-              <a href="tel:+919099255528"
+              <a href="tel:+917433986083"
                 class="text-sm text-blue-600 underline transition sm:text-base hover:text-blue-800 underline-offset-2">
-                +91 90992 55528
+                +91 74339 86083
               </a>
             </div>
 
@@ -83,7 +83,7 @@
             <li class="nav__link">Admissions</li>
           </a> -->
           <a href="faq.html">
-            <li class="nav__link">Faq</li>
+            <li class="nav__link">FAQ</li>
           </a>
           <a href="courses.html">
             <li class="nav__link">Courses</li>
@@ -161,7 +161,7 @@
             preparing
             students to excel in whatever path they choose.
           </p>
-          <a href="pages/overview.html"
+          <a href="#"
             class="bg-[#A33A17] px-8 py-2 rounded-xl text-white transition duration-300 ease-in-out hover:bg-[#0A0A23] hover:scale-105 hover:shadow-lg">Know
             More</a>
         </div>
@@ -202,20 +202,20 @@
       </div>
     </section>
 
-    <section class="president-message max-w-[90%] mx-auto">
+    <section class="president-message max-w-[100%] mx-auto">
       <div class="container">
         <div class="president-message-content">
           <div class="president-message-image">
-            <img src="../assets/images/president.png" alt="President Image"
-              class="img-fluid">
+            <img src="../images/Aditi Bansal 2.png" alt="President Image"
+              class=" img-fluid">
           </div>
           <div class="president-message-text">
             <div
-              class="container mb-4 text-3xl font-semibold text-left lg:text-4xl ">
+              class="text-3xl font-semibold text-left lg:text-4xl">
               DIRECTOR
             </div>
             <div
-              class="container mb-4 text-2xl font-semibold text-left text-gray-600 lg:text-2xl">
+              class="mb-4 text-2xl font-semibold text-left text-gray-600 lg:text-2xl">
               Aditi Bansal
             </div>
 
@@ -558,8 +558,8 @@
               clickable: true,
             },
             loop: true,
-            autoplay: {
-              delay: 3000,
+           autoplay: {
+              delay: 1500,
               disableOnInteraction: false,
               pauseOnMouseEnter: true,
             },
@@ -701,7 +701,7 @@
           </p>
         </div>
         <div class="mr-6 ft-right">
-          <a href="https://pace.pninstitute.in/" target="_blank">
+          <a href="pages/pace.html" target="_blank">
             <div
               class="bg-white text-[#A33A17] font-semibold px-6 py-2 rounded-md hover:opacity-90 transition">Apply
               Now</div>
@@ -715,7 +715,7 @@
           class="container grid gap-10 md:grid-cols-4 max-w-[90%] md:max-w-[90%] mx-auto">
           <!-- About -->
           <div>
-            <img src="../dist/images/gallery/PNI White Logo.png" alt
+            <img src="../images/PNI New.png" alt
               class="mb-4">
             <p class="text-sm">P. N. Institute educates its students in the
               fields of Science, Commerce to discover and transmit
