--- a/public_html/pages/courses.html
+++ b/public_html/pages/courses.html
@@ -129,7 +129,7 @@
 
     <section class="courses__title page__title">
       <div class="container max-w-[80%] mx-auto">
-        <h1 class="title__header">Courses</h1>
+        <h1 class="text-5xl font-bold title__header">Courses</h1>
       </div>
     </section>
 
