--- a/public_html/pages/result.html
+++ b/public_html/pages/result.html
@@ -152,7 +152,7 @@
 
          </div>
       </section>
-      <section class="pro-section bg-[#0A0A23]">
+      <section class="pro-section bg-gradient-to-r from-[#0A0A23] to-[#A33A17]">
         <div class="left-pro">
             <h2>The Mastermind Behind Our Success</h2>
             <p>The courses are conceptualized and designed by India’s Best Teachers, hailing from Top Educational
