--- a/public_html/pages/career.html
+++ b/public_html/pages/career.html
@@ -139,12 +139,12 @@
     </section>
 
     <section class="career__title page__title">
-      <div class="container max-w-[80%] mx-auto">
-        <h1 class="title__header">Career</h1>
+      <div class=" max-w-[90%] mx-auto">
+        <h1 class="text-5xl font-bold title__header">Career</h1>
       </div>
     </section>
 
-    <div class="car-why-pn">
+    <div class="car-why-pn bg-gradient-to-r from-[#0A0A23] to-[#A33A17]">
       <div class="container why-pn__container">
           <div class="container text-4xl font-bold text-center text-white lg:text-5xl">
           Why Join PN Institute
