--- a/public_html/pages/contact.html
+++ b/public_html/pages/contact.html
@@ -129,7 +129,8 @@
 
     <section class="contact__title page__title">
       <div class="container">
-        <h1 class="contact__header title__header">Contact Us</h1>
+        <h1 class="text-5xl font-bold contact__header title__header">Contact
+          Us</h1>
       </div>
     </section>
 
