--- a/public_html/pages/student.html
+++ b/public_html/pages/student.html
@@ -745,7 +745,7 @@ input[type=submit]:hover {
 
     <section class="student__title page__title">
       <div class="container max-w-[80%] mx-auto">
-        <h1 class="title__header ">Student Corner</h1>
+        <h1 class="text-5xl font-bold title__header">Student Corner</h1>
       </div>
     </section>
 
@@ -1036,25 +1036,24 @@ input[type=submit]:hover {
               <option value="class12S">Class 12 Science</option>
             </select>
             <!-- <input type="text" name="year" placeholder="Year" required /> -->
-            <select class="form-class" name="year">
+            <select class="form-class" name="year" id="year-select">
               <option value>Year</option>
-              <option value="2010">2010</option>
-              <option value="2011">2011</option>
-              <option value="2012">2012</option>
-              <option value="2013">2013</option>
-              <option value="2014">2014</option>
-
-              <option value="2015">2015</option>
-              <option value="2016">2016</option>
-
-              <option value="2018">2018</option>
-              <option value="2019">2019</option>
-              <option value="2020">2020</option>
-              <option value="2021">2021</option>
-              <option value="2022">2022</option>
-              <option value="2023">2023</option>
-              <option value="2024">2024</option>
             </select>
+            <script>
+              // Dynamically populate year options from 2010 to current year
+              (function() {
+                var yearSelect = document.getElementById('year-select');
+                if (yearSelect) {
+                  var currentYear = new Date().getFullYear();
+                  for (var y = 2010; y <= currentYear; y++) {
+                    var opt = document.createElement('option');
+                    opt.value = y;
+                    opt.textContent = y;
+                    yearSelect.appendChild(opt);
+                  }
+                }
+              })();
+            </script>
           </div>
 
           <h2>Other Information (Optional)</h2>
